--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/approveRequests.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/approveRequests.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ApproveRequests">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ApproveRequests">
     <children>
-        <VBox layoutX="203.0" layoutY="25.0" prefHeight="260.0" prefWidth="293.0" spacing="7.0">
+        <VBox layoutX="203.0" layoutY="82.0" prefHeight="260.0" prefWidth="293.0" spacing="7.0">
             <children>
                 <ComboBox fx:id="requestCmb" onAction="#ChooseRequest" prefHeight="25.0" prefWidth="167.0" promptText="Request number" style="-fx-font-family: 'Arial Black';">
                     <VBox.margin>
@@ -28,14 +28,14 @@
                 <TextArea fx:id="explanationTA" editable="false" prefHeight="96.0" prefWidth="293.0" promptText="Explanation" style="-fx-font-family: 'Arial Black';" />
             </children>
         </VBox>
-        <Button fx:id="approveBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="277.0" layoutY="285.0" mnemonicParsing="false" onAction="#Approve" style="-fx-background-color: #70879d;" text="Approve" textFill="WHITE">
+        <Button fx:id="approveBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="277.0" layoutY="342.0" mnemonicParsing="false" onAction="#Approve" style="-fx-background-color: #70879d;" text="Approve" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
         </Button>
-        <VBox fx:id="Menu" prefHeight="426.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+        <VBox fx:id="Menu" prefHeight="426.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 0; -fx-background-color: #D3E7F9;" visible="false">
             <children>
-                <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
@@ -43,34 +43,34 @@
                         <Insets top="5.0" />
                     </VBox.margin>
                 </Button>
-                <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="WHITE">
+                <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="#70879d">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="WHITE">
+                <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="#70879d">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
             </children>
         </VBox>
-        <Button fx:id="menuBtn" layoutY="-3.0" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+        <Button fx:id="menuBtn" layoutY="-3.0" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: #70879d;" text="Menu" textFill="#70879d">
             <font>
                 <Font name="System Bold Italic" size="15.0" />
             </font>
         </Button>
-        <Button fx:id="declineBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="285.0" mnemonicParsing="false" onAction="#Decline" prefHeight="25.0" prefWidth="65.0" style="-fx-background-color: #70879d;" text="Decline" textFill="WHITE">
+        <Button fx:id="declineBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="342.0" mnemonicParsing="false" onAction="#Decline" prefHeight="25.0" prefWidth="65.0" style="-fx-background-color: #70879d;" text="Decline" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
