--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/checkGradesTeacher.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/checkGradesTeacher.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CheckGradesTeacher">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CheckGradesTeacher">
    <children>
       <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#d4e0eb" height="143.0" layoutX="399.0" layoutY="125.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="276.0" />
       <ComboBox fx:id="idCMB" layoutX="152.0" layoutY="46.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="103.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
@@ -39,9 +39,9 @@
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
       <TextField fx:id="changeTF" layoutX="544.0" layoutY="136.0" prefHeight="11.0" prefWidth="49.0" style="-fx-font-family: 'Arial Black';" />
-      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="127.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="127.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 0; -fx-background-color: #D3E7F9;" visible="false">
          <children>
-            <Button fx:id="addQuestionBtn" mnemonicParsing="false" onAction="#AddQuestionEvent" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: transparent;" text="Add Question" textFill="WHITE">
+            <Button fx:id="addQuestionBtn" mnemonicParsing="false" onAction="#AddQuestionEvent" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: transparent;" text="Add Question" textFill="#70879d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -49,29 +49,29 @@
                   <Insets top="5.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="buildExamBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#CreateExamEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Build Exam" textFill="WHITE">
+            <Button fx:id="buildExamBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#CreateExamEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Build Exam" textFill="#70879d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="checkGradesBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#CheckGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Check Grades" textFill="WHITE">
+            <Button fx:id="checkGradesBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#CheckGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Check Grades" textFill="#70879d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="requestTimeBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#RequestTimeEvent" prefHeight="60.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Request Extra Time" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="requestTimeBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#RequestTimeEvent" prefHeight="60.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Request Extra Time" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="167.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="167.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
          </children>
       </VBox>
-      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: #70879d;" text="Menu" textFill="#70879d">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
