--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/doExam.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/doExam.fxml
@@ -8,41 +8,41 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.DoExam">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.DoExam">
     <children>
-        <Button fx:id="nextBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" layoutY="99.0" mnemonicParsing="false" onAction="#nextPressed" prefHeight="25.0" prefWidth="113.0" style="-fx-background-color: #70879d;" text="Confirm code" textFill="WHITE">
+        <Button fx:id="nextBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" layoutY="139.0" mnemonicParsing="false" onAction="#nextPressed" prefHeight="25.0" prefWidth="113.0" style="-fx-background-color: #70879d;" text="Confirm code" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="432.0" layoutY="149.0" mnemonicParsing="false" onAction="#donePressed" prefHeight="25.0" prefWidth="113.0" style="-fx-background-color: #70879d;" text="Confirm ID" textFill="WHITE">
+        <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="449.0" layoutY="189.0" mnemonicParsing="false" onAction="#donePressed" prefHeight="25.0" prefWidth="113.0" style="-fx-background-color: #70879d;" text="Confirm ID" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="startBtn" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="450.0" layoutY="192.0" mnemonicParsing="false" onAction="#startExamPressed" style="-fx-background-color: #70879d;" text="Start Exam" textFill="WHITE">
+        <Button fx:id="startBtn" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="450.0" layoutY="232.0" mnemonicParsing="false" onAction="#startExamPressed" style="-fx-background-color: #70879d;" text="Start Exam" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Label alignment="CENTER" layoutX="136.0" layoutY="101.0" prefHeight="0.0" prefWidth="157.0" text="Insert a 4 digit code:" textFill="WHITE">
+        <Label alignment="CENTER" layoutX="136.0" layoutY="141.0" prefHeight="0.0" prefWidth="157.0" text="Insert a 4 digit code:" textFill="#70879d">
             <font>
                 <Font name="System Bold Italic" size="15.0" />
             </font>
         </Label>
-        <TextField fx:id="idStudent" disable="true" layoutX="254.0" layoutY="149.0" minWidth="43.3333333333333" prefHeight="25.0" prefWidth="166.0" style="-fx-font-family: 'Arial Black';" />
-        <Label alignment="CENTER" layoutX="164.0" layoutY="151.0" prefHeight="21.0" prefWidth="82.0" text="Insert ID:" textFill="WHITE">
+        <TextField fx:id="idStudent" disable="true" layoutX="254.0" layoutY="189.0" minWidth="43.3333333333333" prefHeight="25.0" prefWidth="177.0" style="-fx-font-family: 'Arial Black';" />
+        <Label alignment="CENTER" layoutX="164.0" layoutY="191.0" prefHeight="21.0" prefWidth="82.0" text="Insert ID:" textFill="#70879d">
             <font>
                 <Font name="System Bold Italic" size="15.0" />
             </font>
         </Label>
-        <TextField fx:id="first" layoutX="293.0" layoutY="91.0" onKeyTyped="#FirstCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="second" layoutX="329.0" layoutY="91.0" onKeyTyped="#SecondCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="third" layoutX="365.0" layoutY="91.0" onKeyTyped="#ThirdCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="forth" layoutX="404.0" layoutY="91.0" onKeyTyped="#ForthCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
-      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+        <TextField fx:id="first" layoutX="293.0" layoutY="131.0" onKeyTyped="#FirstCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="second" layoutX="329.0" layoutY="131.0" onKeyTyped="#SecondCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="third" layoutX="365.0" layoutY="131.0" onKeyTyped="#ThirdCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="forth" layoutX="404.0" layoutY="131.0" onKeyTyped="#ForthCode" prefHeight="41.0" prefWidth="27.0" style="-fx-font-family: 'Arial Black';" />
+      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 0; -fx-background-color: #D3E7F9;" visible="false">
          <children>
-            <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="WHITE">
+            <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="#70879d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -50,14 +50,14 @@
                   <Insets top="5.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: trasparent;" text="Log Out" textFill="WHITE">
+            <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: trasparent;" text="Log Out" textFill="#70879d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
          </children>
       </VBox>
-      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: #70879d;" text="Menu" textFill="#70879d">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
