--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/examPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/examPage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ExamPage">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ExamPage">
     <children>
         <Button fx:id="doneBTN" disable="true" layoutX="316.0" layoutY="369.0" mnemonicParsing="false" onAction="#done" prefHeight="26.0" prefWidth="118.0" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
             <font>
@@ -17,24 +17,24 @@
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="answer3" layoutX="127.0" layoutY="251.0" mnemonicParsing="false" onAction="#answer3Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #08FF00;">
+        <Button fx:id="answer3" layoutX="127.0" layoutY="251.0" mnemonicParsing="false" onAction="#answer3Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #08FF00;" textFill="WHITE">
             <font>
-                <Font name="Arial Black" size="12.0" />
+                <Font name="System Bold Italic" size="15.0" />
             </font>
         </Button>
-        <Button fx:id="answer4" layoutX="416.0" layoutY="251.0" mnemonicParsing="false" onAction="#answer4Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #FFFB00;">
+        <Button fx:id="answer4" layoutX="416.0" layoutY="251.0" mnemonicParsing="false" onAction="#answer4Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #FFFB00;" textFill="WHITE">
             <font>
-                <Font name="Arial Black" size="12.0" />
+                <Font name="System Bold Italic" size="15.0" />
             </font>
         </Button>
-        <Button fx:id="answer1" layoutX="127.0" layoutY="142.0" mnemonicParsing="false" onAction="#answer1Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #FA0000;">
+        <Button fx:id="answer1" layoutX="127.0" layoutY="142.0" mnemonicParsing="false" onAction="#answer1Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #FA0000;" textFill="WHITE">
             <font>
-                <Font name="Arial Black" size="12.0" />
+                <Font name="System Bold Italic" size="15.0" />
             </font>
         </Button>
-        <Button fx:id="answer2" layoutX="416.0" layoutY="142.0" mnemonicParsing="false" onAction="#answer2Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #008FFF;">
+        <Button fx:id="answer2" layoutX="416.0" layoutY="142.0" mnemonicParsing="false" onAction="#answer2Selected" prefHeight="99.0" prefWidth="199.0" style="-fx-background-color: #008FFF;" textFill="WHITE">
             <font>
-                <Font name="Arial Black" size="12.0" />
+                <Font name="System Bold Italic" size="15.0" />
             </font>
         </Button>
         <Button fx:id="nextBtn" layoutX="527.0" layoutY="363.0" mnemonicParsing="false" onAction="#nextPressed" prefHeight="38.0" prefWidth="139.0" style="-fx-background-color: #70879d;" text="Next Question" textFill="WHITE">
@@ -43,16 +43,16 @@
             </font>
 
         </Button>
-        <Label fx:id="questionText" layoutX="83.0" layoutY="75.0" prefHeight="58.0" prefWidth="584.0" style="-fx-background-color: #E0E0E0;">
+        <Label fx:id="questionText" alignment="CENTER" layoutX="83.0" layoutY="75.0" prefHeight="58.0" prefWidth="584.0" style="-fx-background-color: #E0E0E0;">
             <font>
-                <Font name="Arial Black" size="12.0" />
+                <Font name="System Bold Italic" size="20.0" />
             </font></Label>
         <Button fx:id="aboutBtn" layoutX="568.0" layoutY="29.0" mnemonicParsing="false" onAction="#aboutPressed" prefHeight="25.0" prefWidth="118.0" style="-fx-background-color: #70879d;" text="Notes" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Label layoutX="14.0" layoutY="17.0" prefHeight="58.0" prefWidth="206.0" text="Good Luck !" textAlignment="CENTER">
+        <Label layoutX="14.0" layoutY="17.0" prefHeight="58.0" prefWidth="206.0" text="Good Luck!" textAlignment="CENTER">
             <font>
                 <Font name="System Bold Italic" size="36.0" />
             </font>
