--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/freeText.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/freeText.fxml
@@ -3,22 +3,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="353.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FreeText">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="353.0" prefWidth="335.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FreeText">
     <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dedede" height="277.0" layoutX="12.0" layoutY="17.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="176.0" />
         <Button fx:id="doneBTN" layoutX="142.0" layoutY="299.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Label layoutX="24.0" layoutY="14.0" prefHeight="34.0" prefWidth="176.0" style="-fx-font-family: 'Arial Black';" text="Notes from the teacher:" />
-        <Label fx:id="freeTextTeacher" alignment="TOP_LEFT" layoutX="24.0" layoutY="60.0" prefHeight="113.0" prefWidth="282.0" style="-fx-font-family: 'Arial Black';" text="No text written" textAlignment="CENTER" />
+        <Label layoutX="24.0" layoutY="14.0" prefHeight="34.0" prefWidth="157.0" style="-fx-font-family: 'Arial Black';" text="Notes from the teacher:" />
+        <Label fx:id="freeTextTeacher" alignment="TOP_LEFT" layoutX="24.0" layoutY="60.0" prefHeight="143.0" prefWidth="157.0" style="-fx-font-family: 'Arial Black';" text="No text written" textAlignment="CENTER" wrapText="true" />
         <Label fx:id="timerLabel" alignment="CENTER" contentDisplay="BOTTOM" layoutX="200.0" layoutY="18.0" prefHeight="25.0" prefWidth="118.0" style="-fx-background-color: #E0E0E0;" text="00:00">
             <font>
                 <Font name="Arial Black" size="12.0" />
             </font>
         </Label>
-        <Label fx:id="examTime" alignment="TOP_LEFT" layoutX="26.0" layoutY="198.0" prefHeight="86.0" prefWidth="282.0" style="-fx-font-family: 'Arial Black';" text="The exam is " textAlignment="CENTER" />
+        <Label fx:id="examTime" alignment="TOP_LEFT" layoutX="26.0" layoutY="225.0" prefHeight="59.0" prefWidth="157.0" style="-fx-font-family: 'Arial Black';" text="The exam is " textAlignment="CENTER" wrapText="true" />
     </children>
 </AnchorPane>
