--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="teacherPage" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PrincipalPage">
+<AnchorPane fx:id="teacherPage" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PrincipalPage">
     <children>
         <BorderPane fx:id="BorderPane" prefHeight="426.0" prefWidth="700.0">
             <left>
-                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false" BorderPane.alignment="CENTER">
+                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 0; -fx-background-color: #D3E7F9;" visible="false" BorderPane.alignment="CENTER">
                     <children>
-                        <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -22,22 +22,22 @@
                                 <Insets top="5.0" />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="WHITE">
+                        <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="#70879d">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Button>
-                        <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="WHITE">
+                        <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="#70879d">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Button>
-                        <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Button>
-                        <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="#70879d" wrapText="true">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -48,15 +48,15 @@
             <center>
                 <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="welcome" alignment="CENTER" prefHeight="156.0" prefWidth="600.0" textFill="WHITE">
+                  <Label fx:id="welcome" alignment="CENTER" prefHeight="356.0" prefWidth="600.0" textFill="#70879d">
                      <font>
-                        <Font name="Century" size="47.0" />
+                        <Font name="System Bold" size="36.0" />
                      </font>
                   </Label>
                </children></VBox>
             </center>
         </BorderPane>
-        <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+        <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: #70879d;" text="Menu" textFill="#70879d">
             <font>
                 <Font name="System Bold Italic" size="15.0" />
             </font>
