--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.StudentsPage">
+<AnchorPane prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/exam1.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.StudentsPage">
     <children>
         <BorderPane fx:id="BorderPane" prefHeight="420.0" prefWidth="700.0">
             <left>
-                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false" BorderPane.alignment="CENTER">
+                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: #70879d; -fx-border-width: 0; -fx-background-color: #D3E7F9;" visible="false" BorderPane.alignment="CENTER">
                     <children>
-                        <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="WHITE">
+                        <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="#70879d">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -22,7 +22,7 @@
                                 <Insets top="5.0" />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: trasparent;" text="Log Out" textFill="WHITE">
+                        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: trasparent;" text="Log Out" textFill="#70879d">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -33,15 +33,15 @@
             <center>
                 <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="welcome" alignment="CENTER" prefHeight="156.0" prefWidth="600.0" textFill="WHITE">
+                  <Label fx:id="welcome" alignment="CENTER" prefHeight="356.0" prefWidth="600.0" textFill="#70879d">
                      <font>
-                        <Font name="Century" size="47.0" />
+                        <Font name="System Bold" size="36.0" />
                      </font>
                   </Label>
                </children></VBox>
             </center>
         </BorderPane>
-        <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+        <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: #70879d;" text="Menu" textFill="#70879d">
             <font>
                 <Font name="System Bold Italic" size="15.0" />
             </font>
